tests/NormalTests/paczka1/fuzzy1/29027550.err
Error in line 12: Im70V A222 55,7
Error in line 8: 8Hz S907 262,5
Error in line 15: 8Hz S174 13,1
Error in line 16: 8Hz S907 70,3
Error in line 17: 8Hz S174 12,2
